--- a/eshop-2/WebContent/WEB-INF/web.xml
+++ b/eshop-2/WebContent/WEB-INF/web.xml
@@ -8,5 +8,16 @@
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
+    <welcome-file>eshophtml.src.index.jsp</welcome-file>
   </welcome-file-list>
+  
+  <servlet>
+        <servlet-name>loginServlet</servlet-name>
+        <servlet-class>service.LoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>loginServlet</servlet-name>
+        <url-pattern>/loginServlet</url-pattern>
+
+    </servlet-mapping>
 </web-app>
